[gd_scene load_steps=6 format=3 uid="uid://bkm4mr6ysiayc"]

[ext_resource type="Script" path="res://Level/Analyzer.gd" id="1_fksrv"]
[ext_resource type="Texture2D" uid="uid://bk52iud050cwg" path="res://assets/previous.png" id="2_4sxy4"]
[ext_resource type="Texture2D" uid="uid://c6piuvwdvls5s" path="res://assets/pressed.png" id="3_6bfos"]
[ext_resource type="Texture2D" uid="uid://dk4b4s0fwh6uh" path="res://assets/next.png" id="4_rl4cg"]
[ext_resource type="Texture2D" uid="uid://b6845dx0n1khe" path="res://assets/skip.png" id="5_yvrut"]

[node name="Analyzer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1361.0
offset_bottom = -595.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fksrv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 559.0
offset_bottom = 422.0
color = Color(0.282353, 0.341176, 0.360784, 1)

[node name="Previous" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 299.0
offset_right = 133.0
offset_bottom = 399.0
mouse_filter = 1
texture_normal = ExtResource("2_4sxy4")
texture_pressed = ExtResource("3_6bfos")

[node name="Next" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 299.0
offset_right = 324.0
offset_bottom = 399.0
mouse_filter = 1
texture_normal = ExtResource("4_rl4cg")
texture_pressed = ExtResource("3_6bfos")

[node name="Skip" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 299.0
offset_right = 514.0
offset_bottom = 399.0
mouse_filter = 1
texture_normal = ExtResource("5_yvrut")
texture_pressed = ExtResource("3_6bfos")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 31.0
offset_right = 137.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 30
text = "Before:

After:

Rule:"

[node name="Before" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 31.0
offset_right = 536.0
offset_bottom = 118.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "B C C x"

[node name="After" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 124.0
offset_right = 536.0
offset_bottom = 209.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "B C C"

[node name="Rule" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 214.0
offset_right = 536.0
offset_bottom = 299.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "A -> A x"

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
